<resources>
    <string name="app_name">Ethical Shopping</string>
    <string name="action_settings">Settings</string>
    <string name="activity_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_debugging">Enable Debugging UI</string>
    <string name="moreinfo_debugging">When this is enabled all products will be highlighted, and extra information displayed about why they match or do not match</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="moreinfo_feedback">Report technical issues or suggest new features</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Choose Shop</string>
    <string name="ethical_consumer_fragment_label">Ethical Consumer</string>
    <string name="default_shop_fragment_label">Shopping</string>
    <string name="settings_label">Settings</string>
    <string name="tesco">Tesco</string>
    <string name="sainsburys">Sainsbury\'s</string>
    <string name="asda">Asda</string>
    <string name="boots">Boots</string>
    <string name="milkandmore">Milk &amp; More</string>
    <string name="ethical_consumer">Ethical Consumer</string>
    <string name="ethical_consumer_requires_login">Ethical Consumer - Login or Subscribe</string>
    <string name="good_shopping_guide">Good Shopping Guide</string>
    <string name="back_to_shop_list">Back to shop selection</string>
    <string name="download_progress">Ethical source data download progress:</string>

    <string name="hello_first_fragment">Choose a shop</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>